# text-generation-inference

./: README.md  github_actions.yml  github_actions_setup.sh
.github/workflows/: aws-credentials.yml  build.yaml  build.yml  load_test.yaml  main.yml  requirements.txt  tests.yaml  workflow_file.yml
clients/python/: Makefile
docs/source/: debugging.md  installation.md  issue_fix.md  quicktour.md  supported_models.md  troubleshooting.md
docs/source/basic_tutorials/: consuming_tgi.md  gated_model_access.md  issue_resolution.md
integration-tests/: run_tests.sh
launcher/: build.rs
launcher/src/: env_runtime.rs  main.rs
router/: Cargo.toml  build.rs
router/client/: Cargo.toml  build.rs
router/client/src/: lib.rs
router/grpc-metadata/: Cargo.toml
router/grpc-metadata/src/: lib.rs
router/src/: config.rs  error.rs  health.rs  infer.rs  lib.rs  main.rs  queue.rs  server.rs  sharded_client.rs  validation.rs
server/text_generation_server/models/: __init__.py
server/text_generation_server/utils/: convert.py
src/: error.rs  error_handling.rs
