[package]
name = "router-client"
version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies]
futures = "^0.3"
grpc-metadata = { path = "../grpc-metadata" }
prost = "^0.11"
thiserror = "^1.0"
tokio = { version = "^1.25", features = ["sync"] }
tonic = "^0.9"
tower = "^0.4"
[dependencies]

[build-dependencies]
tonic-build = "0.9.2"
prost-build = "0.11.6"
