<added_file file_path="router/grpc-metadata/Cargo.toml">
[package]
name = "grpc-metadata"
version = "0.1.0"
edition = "2018"

[dependencies]
axum = { version = "0.6.4", features = ["json"] }
</added_file>[package]
name = "grpc-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = "^0.19"
tonic = "^0.9"
tracing = "^0.1"
tracing-opentelemetry = "^0.19"
